--- a/style.css
+++ b/style.css
@@ -1,9 +1,76 @@
+@import url('https://fonts.googleapis.com/css2?family=Damion&family=Montserrat:wght@200;500&family=Raleway:ital,wght@1,200&display=swap');
+#hero-image {
+    background-image: url(./images/san-diego-beach.jpeg);
+    /* background: linear-gradient(pink, blue); */
+    background-repeat:no-repeat; 
+    width: 100%;
+    height: 100%;
+    /* border: white .01px solid; */
+    padding-bottom: 100px;
+    padding-top: 20px;
+    margin-top: 0px;
+    margin-left: 0px;
+    /* background-position: center top; */
+}
+body {
+    background: linear-gradient(0.25turn, #D6C3C3, #F7EEF2, #B7C4E1);
+}
+h1{
+    font-family: 'Damion', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 100px;
+    text-align: center;
+    color: rgb(250, 198, 26);
+    text-shadow: rgb(52, 45, 21) 1px 0 10px;
+    margin-top: 100px;
+    margin-bottom: 5px;
+}
+#tagline {
+    font-family: 'Raleway', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 40px;
+    text-align: center;
+    color: rgb(45, 133, 148);
+    text-shadow: rgb(255, 255, 255) 1px 0 4px;
+    margin-top: 5px;
+
+}
 table {
-    border: black 2px solid; 
+    /* border: rgb(176, 176, 176) 1px solid;  */
+    background-color: white;
+    margin-top: 0px;
+    font-family: 'Montserrat', Arial, sans-serif;
+    font-weight: 200;
+    opacity: .85;
+    margin-bottom: 30px;
 }
 th {
-    border: blue 2px solid;
+    /* border: rgb(191, 191, 191) 1px solid; */
+    font-size: 30px;
+    padding: 20px;
+    color:#6E6A81; 
 }
 td {
-    border: orange 2px solid;
+    padding: 20px;
 } 
+img {
+    width: 1301px;
+}
+#name-cell {
+    text-align: center;
+    font-weight: 500;
+}
+button {
+    background: rgb(63, 163, 181);
+    color: white;
+    width: 120px;
+    height: 50px;
+    border-radius: 4px;
+    border: none;
+    text-shadow: rgb(46, 46, 46) 1px 0 10px;
+    font-size: medium;
+}
+button:hover {
+    background: rgb(7, 79, 92);
+}
+button:active {
+    background: white;
+}
