--- a/public/style.css
+++ b/public/style.css
@@ -61,12 +61,12 @@ img {
 button {
     background: rgb(63, 163, 181);
     color: white;
-    width: 120px;
-    height: 50px;
+    /* width: 120px;
+    height: 50px; */
     border-radius: 4px;
     border: none;
     text-shadow: rgb(46, 46, 46) 1px 0 10px;
-    font-size: medium;
+    /* font-size: medium; */
 }
 button:hover {
     background: rgb(7, 79, 92);
